src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director Field</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Shop__c.Web_Shop</value>
        </filters>
        <label>Rich Web Shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Shop</fullName>
        <active>true</active>
        <label>Web Shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Director_Field_not_empty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Director_Field__c )</errorConditionFormula>
        <errorDisplayField>Director_Field__c</errorDisplayField>
        <errorMessage>Director Field (should not be empty)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Positive_Monthly_Revenue</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
        <errorMessage>Monthly Revenue should be more than 0</errorMessage>
    </validationRules>
</CustomObject>